--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="wrapper" id="app">
+      <img id="logo" src="img/potify.png">
       <div class="player">
         <div class="player__top">
           <div class="player-cover">
